--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 </head>
 
 <body>
-  <div class="topnav p-5 clearfix">
-    <div class="brand">
-      <a class="pl-5 float-left" href="#home">Studio Lenzing</a>
+  <nav class="topnav d-flex align-items-center justify-content-between">
+    <div class="logo-container">
+      <a class="logo-title" href="#home">Studio Lenzing</a>
     </div>
-    <div class="links text-uppercase">
-        <a class="px-5 float-right" href="#contact">Contact</a>
-        <a class="px-5 float-right" href="#work">Work</a>
-      <a class="px-5 float-right" href="#about">About</a>
-    </div>
-  </div>
+      <ul class="d-flex list-unstyled my-auto text-uppercase">
+        <li class="nav-link"><a href="#about">About</a></li>
+        <li class="nav-link"><a href="#work">Work</a></li>
+        <li class="nav-link"><a href="#contact">Contact</a></li>
+      </ul>
+  </nav>
 </body>
 
 </html>
