Used Prettier to fix spacing and tried to adapt BEM

--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Studio Lenzing</title>
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <!-- Google Font - Open Sans -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/studio_lenzing.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Studio Lenzing</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Google Font - Open Sans -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/css" href="assets/studio_lenzing.css">
-</head>
-
-<body>
-  <nav class="topnav d-flex align-items-center justify-content-between">
-    <div class="logo-container">
-      <a class="logo-title" href="#home">Studio Lenzing</a>
-    </div>
-      <ul class="d-flex list-unstyled my-auto text-uppercase">
-        <li class="nav-link"><a href="#about">About</a></li>
-        <li class="nav-link"><a href="#work">Work</a></li>
-        <li class="nav-link"><a href="#contact">Contact</a></li>
+  <body>
+    <nav class="nav d-flex align-items-center justify-content-between">
+      <div class="nav__logo-container">
+        <a class="nav__link" href="#home">Studio Lenzing</a>
+      </div>
+      <ul class="nav__list d-flex list-unstyled my-auto text-uppercase">
+        <li><a class="nav__link" href="#about">About</a></li>
+        <li><a class="nav__link" href="#work">Work</a></li>
+        <li><a class="nav__link" href="#contact">Contact</a></li>
       </ul>
-  </nav>
-</body>
-
+    </nav>
+  </body>
 </html>
